fix(styles): fix bottom position arrow on mobile devices

--- a/src/assets/styles/components/arrowSlideDown.css
+++ b/src/assets/styles/components/arrowSlideDown.css
@@ -14,6 +14,10 @@
     transform-origin: left;
     transition: all $t-normal linear;
 
+    @media (max-width: $mobile-point) {
+        bottom: 40px
+    }
+
     &:hover {
         opacity: .5;
     }
